Details
-
Bug
-
Resolution: Fixed
-
P4: Low
-
None
-
5.15.11, 6.2.6, 6.4.0
-
-
114c6d054 (dev), ce18222f2 (6.5), b45730ca4 (5.15), faffeebba (6.4), f10c0c429 (108-based), 5ec1b6d13 (87-based), ff566374a (102-based), f57a146d4 (5.15), 5777776c4 (5.15.13), 9c4782e17 (dev), ab87258d7 (6.5)
Description
Some webpages takes ages to load in debug build. To reproduce one can use following url
https://earth.google.com/web/
in Qt's example WebEngine Widgets Simple Browser" and also the "WebEngine Quick Nano Browser".
Same Url works okay if both above browser is build in release but it will take more than 10 minute in debug build.
This seems mostly affected on Mac and on windows. Linux performance is way better.
Attachments
Issue Links
- is duplicated by
-
QTBUG-107324 QtWebEngine takes very long time to load in debug build
-
- Closed
-
For Gerrit Dashboard: QTBUG-110504 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
460711,2 | Force to disable IPC logging | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
460816,2 | Force to disable IPC logging | 6.5 | qt/qtwebengine | Status: MERGED | +2 | 0 |
460817,3 | Force to disable IPC logging | 6.4 | qt/qtwebengine | Status: MERGED | +2 | 0 |
460818,3 | Force to disable IPC logging | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |
460835,1 | Force to disable IPC logging | 5.4 | qt/qtwebengine | Status: ABANDONED | 0 | 0 |
461554,2 | Add checksum to mailbox name in Release build too | 108-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
462335,2 | Add checksum to mailbox name in Release build too | 87-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
462336,2 | Add checksum to mailbox name in Release build too | 102-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
462361,3 | Update Chromium | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |
462844,2 | Update Chromium | 5.15.13 | qt/qtwebengine | Status: MERGED | +2 | 0 |
472937,4 | Stop disabling optimization of V8 | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
473009,2 | Stop disabling optimization of V8 | 6.5 | qt/qtwebengine | Status: MERGED | +2 | 0 |