Add checksum to mailbox name in Release build too

The lack of checksum may cause assert and error messages when a mailbox
is passed from a release render process to a debug render process.

Task-number: QTBUG-110504
Change-Id: Ib7d78e1e86a3f2ddda6dc8066abf9198040c38f6
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/461554
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit f10c0c429f688fa7ee39ca8af4ff522e30776bea)
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/462335
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>