chromium/gpu/command_buffer/common/mailbox.cc
@@ -35,7 +35,7 @@ Mailbox GenerateMailbox(bool is_shared_image) {
   // Generates cryptographically-secure bytes.
   base::RandBytes(result.name, sizeof(result.name));
   MarkMailboxAsSharedImage(is_shared_image, result.name);
-#if !defined(NDEBUG)
+#if !defined(NDEBUG) || defined(TOOLKIT_QT)
   int8_t value = 1;
   for (size_t i = 1; i < sizeof(result.name); ++i)
     value ^= result.name[i];
